[package]
name = "payments_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.23"

[profile.release]
# lto only below seems to reduce the execution of 10m deposits-withdrawals sample from ~4.5s to ~3.9s
lto = true
#codegen-units = 1
#panic = "abort"

